--- a/get_real_uv_pollen_satellite_data.ipynb
+++ b/get_real_uv_pollen_satellite_data.ipynb
@@ -20,7 +20,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install cdsapi xarray numpy matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# User-adjustable weights\n",
     "UV_WEIGHT = 4  # strong sensitivity\n",
@@ -36,7 +47,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import cdsapi\n",
     "import xarray as xr\n",
@@ -55,7 +68,11 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "# Fetch UV Index (CAMS global atmospheric composition forecasts)\n",
     "c = cdsapi.Client()\n",
@@ -80,7 +97,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Fetch Pollen (CAMS European air quality forecasts)\n",
     "pollen_path = 'data/pollen_berlin.nc'\n",
@@ -110,7 +129,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Load UV data\n",
     "uv_ds = xr.open_dataset(uv_path)\n",
@@ -124,7 +145,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Align time and grid\n",
     "# We'll use the first time step as an example\n",
@@ -159,15 +182,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
